<?xml version="1.0" encoding="utf-8"?>
<ScrollView  android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="net.unifyconcept.sidhartproject.DetailActivity"
    android:background="@drawable/rback">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/guest_details"
        android:textSize="24sp"
        android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:hint="@string/hint_name"
            android:layout_below="@id/instruction"
            android:id="@+id/txtName"
            android:paddingStart="15sp"
            android:paddingEnd="15dp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:background="@drawable/text"
            android:layout_marginTop="30sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:hint="@string/hint_date"
            android:id="@+id/txtDate"
            android:layout_below="@id/txtName"
            android:paddingStart="15sp"
            android:paddingEnd="15dp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:background="@drawable/text"
            android:layout_marginTop="30sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:hint="@string/hint_time"
            android:id="@+id/txtTime"
            android:layout_below="@id/txtDate"
            android:paddingStart="15sp"
            android:paddingEnd="15dp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:background="@drawable/text"
            android:layout_marginTop="30sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:hint="@string/hint_address"
            android:id="@+id/txtAddress"
            android:layout_below="@id/txtTime"
            android:inputType="textMultiLine"
            android:textSize="18sp"
            android:background="@drawable/text"
            android:paddingStart="15sp"
            android:paddingEnd="15dp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:layout_marginTop="30sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/txtAddress"
            android:paddingTop="30dp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:gravity="bottom"
            >
            <Button
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:text="Reset"
                android:onClick="reset"
                android:layout_weight="1"
                android:background="@drawable/text"/>
            <View
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                />
            <Button
                android:layout_width="150sp"
                android:layout_height="50sp"
                android:text="Preview"
                android:onClick="preview"
                android:layout_weight="1"
                android:background="@drawable/text"/>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
