<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
    android:background="@drawable/iv_back"
>

<!--Put Lord Hunnan Image Here Brother-->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/back" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/join_us"
        android:textColor="@color/blackFore"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/diwali_festival"
        android:textColor="@color/blackFore"
        android:textSize="32sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView2"
        android:layout_below="@+id/textView2"
        android:id="@+id/layout1"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/date"
        android:textColor="@color/blackFore"
        android:textSize="18sp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/tDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="20sp"
            android:layout_alignEnd="@+id/imageView2"
            android:text="@string/date"
            android:textColor="@color/blackFore"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView2"
        android:layout_below="@+id/layout1"
        android:id="@+id/layout2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/time"
            android:textColor="@color/blackFore"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="20sp"
            android:layout_alignEnd="@+id/imageView2"
            android:text="@string/time"
            android:textColor="@color/blackFore"
            android:textSize="18sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView2"
        android:layout_below="@+id/layout2"
        android:id="@+id/layout3"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/address"
            android:textColor="@color/blackFore"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tAddress"
            android:layout_width="120sp"
            android:layout_height="100sp"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="20sp"
            android:layout_alignEnd="@+id/imageView2"
            android:text="@string/address"
            android:textColor="@color/blackFore"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>